kubernetes-deploy/qa/qa.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "company-front"
  namespace: "company-front"
  labels:
    app: "company-front"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "company-front"
  template:
    metadata:
      labels:
        app: "company-front"
    spec:
      containers:
      - name: "company-front"
        image: "gcr.io/mobbuy-qa-microservices/company-front:0.0.1"
        imagePullPolicy: Always
        apiVersion: "v1"
        kind: "Service"
        metadata:
          name: "company-front"
          namespace: "company-front"
          labels:
            app: "company-front"
          annotations:
            external-dns.alpha.kubernetes.io/hostname: company-front.qa.appmobbuy.tech
        spec:
          type: "LoadBalancer"
          selector:
            app: "company-front"
          ports:
          - port: 80
